indicates to call perlude in tutorial

--- a/lib/MARC/MIR/Tutorial.pod
+++ b/lib/MARC/MIR/Tutorial.pod
@@ -54,6 +54,7 @@ the perfect boilerplate
 
     use autodie;
     use Modern::Perl;
+    use Perlude;
     use MARC::MIR;
 
 print all the ids of the records (assuming the id is in 001, the common case)
